<resources>
    <string name="app_name">Smart Sensors</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <string name="humidity_graph_title">Humidity</string>
    <string name="temperature_graph_title">Temperature</string>
    <string name="toggle_led_title">Arduino LED</string>

    <string name="topic_humidity_sensor">dynamic_humidity_topic</string>
    <string name="topic_temperature_sensor">dynamic_temperature_topic</string>
    <string name="topic_led">dynamic_led_topic</string>


    <string name="switch_humidity">Receive sensor readings</string>
    <string name="switch_temperature">Receive sensor readings</string>
    <string name="threshold_humidity">Notify above</string>
    <string name="threshold_temperature">Notify above</string>

    <string name="title_humidity">Humidity</string>
    <string name="title_temperature">Temperature</string>
    <string name="hint_humidity_threshold">25%</string>
    <string name="hint_temperature_threshold">10ºC</string>

    <string name="temperature_channel_name">Temperature Sensor Threshold Reached</string>
    <string name="humidity_channel_name">Humidity Sensor Threshold Reached</string>
    <string name="temperature_channel_description">Notify when temperature reaches certain threshold</string>
    <string name="humidity_channel_description">Notify when humidity reaches certain threshold</string>
    <string name="title_number_picker">Notification Threshold</string>
</resources>