<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_humidity"
            android:textSize="20sp"
            app:switchMinWidth="60dp"
            app:switchPadding="20dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_temperature"
            android:textSize="20sp"
            app:switchMinWidth="60dp"
            app:switchPadding="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/threshold_humidity"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/threshold_humidity"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="3"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/threshold_temperature"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/threshold_temperature"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>